borsh-derive/src/internals/schema/struct/snapshots/borsh_derive__internals__schema__r#struct__tests__tuple_struct_partial_skip.snap
---
source: borsh-derive/src/internals/schema/struct/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl borsh::BorshSchema for A {
    fn declaration() -> borsh::schema::Declaration {
        "A".to_string()
    }
    fn add_definitions_recursively(
        definitions: &mut borsh::__private::maybestd::collections::BTreeMap<
            borsh::schema::Declaration,
            borsh::schema::Definition,
        >,
    ) {
        let fields = borsh::schema::Fields::UnnamedFields(
            borsh::__private::maybestd::vec![
                < String as borsh::BorshSchema > ::declaration()
            ],
        );
        let definition = borsh::schema::Definition::Struct {
            fields,
        };
        let no_recursion_flag = definitions.get(&Self::declaration()).is_none();
        Self::add_definition(Self::declaration(), definition, definitions);
        if no_recursion_flag {
            <String as borsh::BorshSchema>::add_definitions_recursively(definitions);
        }
    }
}

